aad visitor counter

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,7 +81,12 @@
         <p>Bachelor of Science in Computer Science<br>
         University Name, Graduation Year</p>
     </section>
+    <footer>
+        <Span id="visitor-counter"> visitors: 0</Span>
+    </footer>
 </div>
+
+ <script src="counter.js"></script>
 </body>
 
 </html>
