--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,14 +16,12 @@
     
     <section>
         <h2>Profile Summary</h2>
-        <p>A highly motivated Cloud Engineer with experience in AWS, Azure, and Google Cloud. Skilled in cloud architecture, infrastructure automation, and continuous integration and delivery (CI/CD). Passionate about leveraging cloud technologies to solve complex problems and improve operational efficiency.</p>
+        <p>A highly motivated Cloud Engineer with experience in Azure. Skilled in cloud architecture, infrastructure automation, and continuous integration and delivery (CI/CD). Passionate about leveraging cloud technologies to solve complex problems and improve operational efficiency.</p>
     </section>
     <section>
         <h2>Certifications</h2>
         <ul>
-            <li>AWS Certified Solutions Architect</li>
             <li>Microsoft Certified: Azure Solutions Architect Expert</li>
-            <li>Google Cloud Professional Cloud Architect</li>
         </ul>
     </section>
     <section>
@@ -82,11 +80,10 @@
         University Name, Graduation Year</p>
     </section>
     <footer>
-        <Span id="visitor-counter"> visitors: 0</Span>
+        <p>Visitor count: <span id="visitorCount">0</span></p>
     </footer>
 </div>
-
- <script src="counter.js"></script>
+<script src="main.js"></script>
 </body>
 
 </html>
