--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Arvind Upendra Yadav</h1>
+            <h1>Arvind Kumar</h1>
             <p>Cloud Engineer</p>
             <p>Email: aarviiyadav18@gmail.com | Phone: (+91) 8825128683</p>
         </header>
